syntax = "proto3";

service Database {
  rpc CreateTable (TableDefinitionRequest) returns (EmptyResponse);
  rpc DropTable (TableRequest) returns (EmptyResponse);
  rpc IsTableExists (TableRequest) returns (BoolResponse);
  rpc Find (TableFieldRequest) returns (EntityResponse);
  rpc FindMany (TableFieldRequest) returns (EntitiesResponse);
  rpc FindAll (TableRequest) returns (EntitiesResponse);
  rpc Save (EntityRequest) returns (EntityResponse);
  rpc Delete (TableFieldRequest) returns (EmptyResponse);
}

message TableDefinitionRequest {
  string table_name = 1;
  TableDefinition definition = 2;
}

message TableDefinition {
  repeated string index_by = 1;
  map<string, ColumnDefinition> columns = 2;
}

message ColumnDefinition {
  string name = 1;
  ColumnDataType type = 2;
  bool required = 3;
  bool primary_key = 4;
}

enum ColumnDataType {
  Number = 0;
  String = 1;
  Boolean = 2;
}

message TableRequest {
  string table_name = 1;
}

message TableFieldRequest {
  string table_name = 1;
  string key = 2;
  EntityValue value = 3;
}

message EntityRequest {
  string table_name = 1;
  map<string, EntityValue> entity = 2;
}

message EntityValue {
  oneof kind {
    string string_value = 1;
    int32 int_value = 2;
    bool bool_value = 3;
  }
}

message EntityResponse {
  map<string, EntityValue> result = 1;
}

message EntitiesResponse {
  repeated EntityResponse result = 1;
}

message BoolResponse {
  bool result = 1;
}

message EmptyResponse {}
